<resources>
    <string name="app_name">TallerComputadores</string>
    <string name="action_settings">Settings</string>
    <string name="informacion">Información</string>
    <string name="marca">Marca</string>
    <string name="tipo">Tipo</string>
    <string name="ram">RAM</string>
    <string name="color">Color</string>
    <string name="so">Sistema Operativo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="titulo">Crear Computador</string>
    <string name="crear">Crear</string>
    <string name="limpiar">Limpiar</string>
    <string name="hp">Hewlett Packard</string>
    <string name="dell">Dell Computers, Inc</string>
    <string name="apple">Apple, Inc</string>
    <string name="dos_gb">2GB</string>
    <string name="cuatro_gb">4GB</string>
    <string name="ocho_gb">8GB</string>
    <string name="doce_gb">12GB</string>
    <string name="azul">Azul</string>
    <string name="negro">Negro</string>
    <string name="gris">Gris Plata</string>
    <string name="rojo">Rojo</string>
    <string name="windows">Microsoft Windows 10</string>
    <string name="macos">macOS high sierra</string>
    <string name="win7">Microsoft Windows 7</string>
    <string name="portatil">Portátil</string>
    <string name="escritorio">Escritorio</string>
    <string name="all_in_one">All in One</string>
    <string-array name="marcas">
        <item>@string/hp</item>
        <item>@string/dell</item>
        <item>@string/apple</item>
    </string-array>
    <string-array name="tipos">
        <item>@string/portatil</item>
        <item>@string/escritorio</item>
        <item>@string/all_in_one</item>
    </string-array>
    <string-array name="rams">
        <item>@string/dos_gb</item>
        <item>@string/cuatro_gb</item>
        <item>@string/ocho_gb</item>
        <item>@string/doce_gb</item>
    </string-array>
    <string-array name="colores">
        <item>@string/azul</item>
        <item>@string/negro</item>
        <item>@string/gris</item>
        <item>@string/rojo</item>
    </string-array>
    <string-array name="sos">
        <item>@string/windows</item>
        <item>@string/win7</item>
        <item>@string/macos</item>
    </string-array>
    <string name="exitoso">Computador Creado Exitosamente!</string>
    <string name="pregunta_eliminacion">Desea Eliminar el Registro</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
</resources>
